ajouter d'agences et modif des routes

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -15,7 +15,7 @@
 
 	<script src="/dist/js/bootstrap-table.js"></script>
 	<link rel="stylesheet" href="bootstrap-table.css">
-	
+
 	<style>
 		body 		{
 
@@ -87,6 +87,8 @@
 					<li><a href="/agences"> Liste des agences </a></li>
 					<li role="separator" class="divider"></li>
 					<li><a href="/chercher_agence">Chercher/Modifier</a></li>
+					<li role="separator" class="divider"></li>
+					<li><a href="/chercher_parking">Ajouter</a></li>
 				</ul>
 			</li>
 
@@ -98,6 +100,8 @@
 				<li><a href="/parking"> Liste des parkings </a></li>
 				<li role="separator" class="divider"></li>
 				<li><a href="/chercher_parking">Chercher/Modifier</a></li>
+				<li role="separator" class="divider"></li>
+				<li><a href="/ajouter_parking">Ajouter</a></li>
 			</ul>
 		</li>
 	</ul>
