--- a/views/header0.ejs
+++ b/views/header0.ejs
@@ -85,6 +85,8 @@
 					<li><a href="/agences"> Liste des agences </a></li>
 					<li role="separator" class="divider"></li>
 					<li><a href="/chercher_agence">Chercher/Modifier</a></li>
+					<li role="separator" class="divider"></li>
+					<li><a href="/ajouter_agence">Ajouter</a></li>
 				</ul>
 			</li>
 
@@ -96,6 +98,8 @@
 				<li><a href="/parking"> Liste des parkings </a></li>
 				<li role="separator" class="divider"></li>
 				<li><a href="/chercher_parking">Chercher/Modifier</a></li>
+				<li role="separator" class="divider"></li>
+				<li><a href="/ajouter_agence">Ajouter</a></li>
 			</ul>
 		</li>
 	</ul>
