--- a/views/agence.ejs
+++ b/views/agence.ejs
@@ -6,7 +6,7 @@
 	</head>
 <body>
 
-  <!-- local host to be changed?  -->
+  <!-- local host to be changed?  >
   <form action="/agences" method="POST">
 		<div class="col-md-4 col-md-offset-4">
 			<h1>Ajouter agence</h1>
@@ -21,18 +21,20 @@
 		<br><br>
 		<div class="centered">
 		<input type="submit" value="Ajouter">
-		<br><br>
-		<h1><span class="fa fa-home"></span> Liste des agences</h1>
-		</div>
+		>
 	</div>
-  </form>
+</form-->
 
-  <% if (message.length > 0) { %>
+	<% if (message.length > 0) { %>
       <div class="alert alert-danger"><%= message %></div>
   <% } %>
-<div class="container">
-    <br>
+<div class="container text-center">
 
+	<br><br>
+	<h1><span class="fa fa-home"></span> Liste des agences</h1>
+
+    <br><br>
+</div>
   <table  class = "table table-hover table-bordered text-center">
     <div class="text-center">
       <tr>
@@ -46,66 +48,13 @@
         <td> <%=agences.idAgence%></td>
         <td> <%=agences.nom%></td>
         <td> <%=agences.adresse%></td>
-        <td>
-          <p data-placement="top" data-toggle="tooltip" title="Edit"><button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit" ><span class="glyphicon glyphicon-pencil"></span></button></p>
-        </td>
-        <td>
-          <p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></button></p>
-        </td>
 
 
       </tr>
       <%})%>
   </table>
 
-  <div class="modal fade" id="edit" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
-	      <div class="modal-dialog">
-	    <div class="modal-content">
-	          <div class="modal-header">
-	        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
-	        <h4 class="modal-title custom_align" id="Heading">Modifier l'agence </h4>
-	      </div>
-	          <div class="modal-body">
-	          <div class="form-group">
-	        <input class="form-control " type="text" placeholder="Nom">
-	        </div>
-	        <div class="form-group">
 
-	        <input class="form-control " type="text" placeholder="Adresse">
-	        </div>
-	      </div>
-	          <div class="modal-footer ">
-	        <button type="button" class="btn btn-warning btn-lg" style="width: 100%;"><span class="glyphicon glyphicon-ok-sign"></span> Mettre à jour </button>
-	      </div>
-	        </div>
-	    <!-- /.modal-content -->
-	  </div>
-	      <!-- /.modal-dialog -->
-	    </div>
-
-
-
-	    <div class="modal fade" id="delete" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
-	      <div class="modal-dialog">
-	    <div class="modal-content">
-	          <div class="modal-header">
-	        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
-	        <h4 class="modal-title custom_align" id="Heading"> Supprimer cette agence </h4>
-	      </div>
-	          <div class="modal-body">
-
-	       <div class="alert alert-danger"><span class="glyphicon glyphicon-warning-sign"></span> Etes-vous sûr de vouloir supprimer cette agence ? </div>
-
-	      </div>
-	        <div class="modal-footer ">
-	        <button type="button" class="btn btn-success" ><span class="glyphicon glyphicon-ok-sign"></span> Oui</button>
-	        <button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Non</button>
-	      </div>
-	        </div>
-	    <!-- /.modal-content -->
-	  </div>
-	      <!-- /.modal-dialog -->
-	    </div>
 
 </div>
 
