--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,9 @@
 <!doctype html>
 <html>
 <head>
-	<title>AVIS MANAGEMENT</title>
+	<title> Locanor  </title>
+	<link rel="SHORTCUT ICON" href="/images/favicon.ico" />
+	
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
 	<style>
