ajout de parking

--- a/views/ajouter_agence.ejs
+++ b/views/ajouter_agence.ejs
@@ -21,7 +21,12 @@
   <div class="container">
 
     <table  class = "table table-hover table-bordered text-center" id="myTable">
-  		<div class="text-center">
+      <br>
+        <div class="text-center">
+          <h2><span class="glyphicon glyphicon-refresh"></span> Ajouter une agence </h2>
+          <br>
+        </div>
+      <br>
   			<tr>
   			<th>  Nom  </th>
   			<th>  Adresse </th>
