--- a/views/ajouter_parking.ejs
+++ b/views/ajouter_parking.ejs
@@ -19,17 +19,23 @@
 
   <body>
   <div class="container">
+    <br>
+      <div class="text-center">
+        <h2><span class="glyphicon glyphicon-refresh"></span> Ajouter un parking </h2>
+        <br>
+      </div>
+    <br>
 
     <table  class = "table table-hover table-bordered text-center" id="myTable">
   		<div class="text-center">
   			<tr>
   			<th>  Nom  </th>
-  			<th>  Adresse </th>
+  			<th>  Agence </th>
   			</tr>
   	</div>
   			<tr >
   				<td ><div contenteditable><span id = 'nom'> NOM </span> </div></td>
-  				<td> <div contenteditable><span id = 'adresse'> ADRESSE </span> </div> </td>
+  				<td> <div contenteditable><span id = 'agence'> AGENCE </span> </div> </td>
 
   			</tr>
   	</table>
@@ -64,10 +70,10 @@
         function ajout(){
 
         		$.ajax({
-        			url: 'http://localhost:8080/data_ajouter_agence',
+        			url: 'http://localhost:8080/data_ajouter_parking',
         			data : {
         			nom : $( '#nom' ).html(),
-        			adresse : $( '#adresse' ).html()
+        			agence : $( '#agence' ).html()
         				},
 
         			success : function (data) {
