--- a/views/header.ejs
+++ b/views/header.ejs
@@ -30,7 +30,7 @@
 	  <div class="container-fluid">
 	    <!-- display image -->
 	    <div class="navbar-header">
-				<a class="navbar-brand" href="#">
+				<a class="navbar-brand" href="/profile">
 	        <img alt="Brand" src="/images/logo.jpg">
 	      </a>
 
