--- a/views/header0.ejs
+++ b/views/header0.ejs
@@ -28,7 +28,7 @@
 	  <div class="container-fluid">
 	    <!-- display image -->
 	    <div class="navbar-header">
-				<a class="navbar-brand" href="#">
+				<a class="navbar-brand"href="/profile">
 	        <img alt="Brand" src="/images/logo.jpg">
 	      </a>
 
@@ -97,7 +97,7 @@
 				<li role="separator" class="divider"></li>
 				<li><a href="/chercher_parking">Chercher/Modifier</a></li>
 				<li role="separator" class="divider"></li>
-				<li><a href="/ajouter_agence">Ajouter</a></li>
+				<li><a href="/ajouter_parking">Ajouter</a></li>
 			</ul>
 		</li>
 	</ul>
