--- a/views/agence.ejs
+++ b/views/agence.ejs
@@ -6,35 +6,14 @@
 	</head>
 <body>
 
-  <!-- local host to be changed?  >
-  <form action="/agences" method="POST">
-		<div class="col-md-4 col-md-offset-4">
-			<h1>Ajouter agence</h1>
-		<div class="input-group input-group-sm">
-  		<span class="input-group-addon" id="sizing-addon3">Nom</span>
-  		<input type="text" class="form-control" name="nom_agence" placeholder="" aria-describedby="sizing-addon3">
-		</div>
-		<div class="input-group input-group-sm">
-			<span class="input-group-addon" id="sizing-addon3">Adresse</span>
-			<input type="text" class="form-control" name="adresse_agence" placeholder="" aria-describedby="sizing-addon3">
-		</div>
-		<br><br>
-		<div class="centered">
-		<input type="submit" value="Ajouter">
-		>
-	</div>
-</form-->
 
-	<% if (message.length > 0) { %>
-      <div class="alert alert-danger"><%= message %></div>
-  <% } %>
 <div class="container text-center">
 
 	<br><br>
-	<h1><span class="fa fa-home"></span> Liste des agences</h1>
+	<h1><span class="fa fa-home"></span><b> Liste des agences </b></h1>
 
     <br><br>
-</div>
+
   <table  class = "table table-hover table-bordered text-center">
     <div class="text-center">
       <tr>
