--- a/views/header.ejs
+++ b/views/header.ejs
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
 	<meta charset="utf-8">
-  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+  <meta name="viewport" content="initial-scale=1, user-scalable=yes, width=device-width">
   <!--meta name="viewport" content="width=device-width, initial-scale=1" /-->
 	<!--Scripts à mettre dans un footer éventuellement, pour optimiser le chargement-->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -86,7 +86,7 @@
 					<li role="separator" class="divider"></li>
 					<li><a href="/chercher_agence">Chercher/Modifier</a></li>
 					<li role="separator" class="divider"></li>
-					<li><a href="/chercher_parking">Ajouter</a></li>
+					<li><a href="/ajouter_agence">Ajouter</a></li>
 				</ul>
 			</li>
 
