--- a/views/parking.ejs
+++ b/views/parking.ejs
@@ -6,30 +6,17 @@
 	</head>
 <body>
 
-  <!-- local host to be changed?  -->
-	<form action="/parking" method="POST">
-		<div class="col-md-4 col-md-offset-4">
-			<h1>Ajouter Parking</h1>
-		<div class="input-group input-group-sm">
-			<span class="input-group-addon" id="sizing-addon3">Nom</span>
-			<input type="text" class="form-control" name="nom_parking" placeholder="" aria-describedby="sizing-addon3">
-		</div>
-		<br><br>
-		<div class="centered">
-		<input type="submit" value="Ajouter">
-		<br><br>
-		<h1><span class="fa fa-home"></span> Liste des Parking</h1>
-		</div>
-	</div>
-	</form>
 
-  <% if (message.length > 0) { %>
-      <div class="alert alert-danger"><%= message %></div>
-  <% } %>
+
+
 <div class="container">
-
+<br>
+	<div class="text-center">
+		<h1><span class="fa fa-home"></span><b> Liste des Parking </b></h1>
+	</div>
+  <br><br>
   <table  class = "table table-hover table-bordered text-center">
-    <div class="text-center">
+
       <tr>
       <th>id parking</th>
       <th>Nom parking</th>
@@ -39,64 +26,12 @@
       <tr>
         <td> <%=parking.idParking%></td>
         <td> <%=parking.Nom%></td>
-        <td>
-          <p data-placement="top" data-toggle="tooltip" title="Edit"><button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit" ><span class="glyphicon glyphicon-pencil"></span></button></p>
-        </td>
-        <td>
-          <p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></button></p>
-        </td>
+
       </tr>
     <%})%>
   </table>
 
-  <div class="modal fade" id="edit" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
-	      <div class="modal-dialog">
-	    <div class="modal-content">
-	          <div class="modal-header">
-	        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
-	        <h4 class="modal-title custom_align" id="Heading">Modifier l'agence </h4>
-	      </div>
-	          <div class="modal-body">
-	          <div class="form-group">
-	        <input class="form-control " type="text" placeholder="Nom">
-	        </div>
-	        <div class="form-group">
 
-	        <input class="form-control " type="text" placeholder="Adresse">
-	        </div>
-	      </div>
-	          <div class="modal-footer ">
-	        <button type="button" class="btn btn-warning btn-lg" style="width: 100%;"><span class="glyphicon glyphicon-ok-sign"></span> Mettre à jour </button>
-	      </div>
-	        </div>
-	    <!-- /.modal-content -->
-	  </div>
-	      <!-- /.modal-dialog -->
-	    </div>
-
-
-
-	    <div class="modal fade" id="delete" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
-	      <div class="modal-dialog">
-	    <div class="modal-content">
-	          <div class="modal-header">
-	        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
-	        <h4 class="modal-title custom_align" id="Heading"> Supprimer ce parking </h4>
-	      </div>
-	          <div class="modal-body">
-
-	       <div class="alert alert-danger"><span class="glyphicon glyphicon-warning-sign"></span> Etes-vous sûr de vouloir supprimer ce parking ? </div>
-
-	      </div>
-	        <div class="modal-footer ">
-	        <button type="button" class="btn btn-success" ><span class="glyphicon glyphicon-ok-sign"></span> Oui</button>
-	        <button type="button" class="btn btn-default" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Non</button>
-	      </div>
-	        </div>
-	    <!-- /.modal-content -->
-	  </div>
-	      <!-- /.modal-dialog -->
-	    </div>
 
 </div>
 
