--- a/views/f44.ejs
+++ b/views/f44.ejs
@@ -145,7 +145,7 @@
         <div class="form-group">
           <p>
             <label for="Aspiration intérieure"> Aspiration intérieure  :  </label>
-            <input id="Aspiration intérieure" name="Contrôl_-intérieur" type="checkbox" unchecked data-on-text="Fait"  data-off-text="Pas fait">
+            <input id="Aspiration intérieure" name="Aspiration_intérieur" type="checkbox" unchecked data-on-text="Fait"  data-off-text="Pas fait">
           </p>
         </div>
 
@@ -166,7 +166,7 @@
         <div class="form-group">
           <p>
             <label for="Nettoyage_parebrise_intérieur"> Nettoyage parebrise intérieur  : </label>
-            <input id="Nettoyage parebrise intérieur" name="Nettoyage parebrise intérieur" type="checkbox" unchecked data-on-text="Fait"  data-off-text="Pas fait">
+            <input id="Nettoyage parebrise intérieur" name="Nettoyage_parebrise_intérieur" type="checkbox" unchecked data-on-text="Fait"  data-off-text="Pas fait">
           </p>
         </div>
 
@@ -180,7 +180,7 @@
         <div class="form-group">
           <p>
             <label for="Niveau lave-glace"> Niveau lave-glace  : </label>
-            <input id="Niveau lave-glace" name="Niveau_lave-glace" type="checkbox" unchecked data-on-text="Fait"  data-off-text="Pas fait">
+            <input id="Niveau lave-glace" name="Niveau_lave_glace" type="checkbox" unchecked data-on-text="Fait"  data-off-text="Pas fait">
           </p>
         </div>
 
