f44 ajout d'un input carburant

--- a/views/f44.ejs
+++ b/views/f44.ejs
@@ -143,6 +143,11 @@
         </div>
 
         <div class="form-group">
+          <input type="text"  name="remplissage_carburant" class="typeahead form-control" placeholder="remplissage_carburant"  />
+        </div>
+
+        
+        <div class="form-group">
           <p>
             <label for="Aspiration intérieure"> Aspiration intérieure  :  </label>
             <input id="Aspiration intérieure" name="Aspiration_intérieur" type="checkbox" unchecked data-on-text="Fait"  data-off-text="Pas fait">
@@ -204,6 +209,7 @@
             <input id="Contrôle intérieur" name="Aspiration_intérieure" type="checkbox" unchecked data-on-text="Fait"  data-off-text="Pas fait">
           </p>
         </div>
+
 
 
 			  <p data-toggle="tooltip" title="su"><button type="button" class="btn btn-primary pull-right"data-toggle="modal" data-target="#delete">Envoyer</button></p>
