--- a/views/ajouter_agence.ejs
+++ b/views/ajouter_agence.ejs
@@ -33,8 +33,8 @@
   			</tr>
   	</div>
   			<tr >
-  				<td ><div contenteditable><span id = 'nom'> NOM </span> </div></td>
-  				<td> <div contenteditable><span id = 'adresse'> ADRESSE </span> </div> </td>
+  				<td ><div contenteditable><span id = 'nom'> Mettre le nom ici </span> </div></td>
+  				<td> <div contenteditable><span id = 'adresse'> Mettre l'adresse ici </span> </div> </td>
 
   			</tr>
   	</table>
