--- a/views/f44.ejs
+++ b/views/f44.ejs
@@ -143,7 +143,7 @@
         </div>
 
         <div class="form-group">
-          <input type="text"  name="remplissage_carburant" class="typeahead form-control" placeholder="remplissage_carburant"  />
+          <input type="text"  name="remplissage_carburant" class="typeahead form-control" placeholder="Remplissage Carburant"  />
         </div>
 
         
@@ -212,16 +212,16 @@
 
 
 
-			  <p data-toggle="tooltip" title="su"><button type="button" class="btn btn-primary pull-right"data-toggle="modal" data-target="#delete">Envoyer</button></p>
+			  <p data-toggle="tooltip" title="su"><button type="button" class="btn btn-primary pull-right"data-toggle="modal" data-target="#send">Envoyer</button></p>
 
-        <div class="modal fade" id="delete" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
+        <div class="modal fade" id="send" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
           <div class="modal-dialog">
         <div class="modal-content">
               <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
             <h4 class="modal-title custom_align" id="Heading"> Confirmer cette entrée </h4>
           </div>
-              <div class="modal-body">
+            <div class="modal-body">
 
            <div class="alert alert-danger"><span class="glyphicon glyphicon-warning-sign"></span> Merci de confirmer votre saisie </div>
 
