--- a/views/f44.ejs
+++ b/views/f44.ejs
@@ -118,6 +118,12 @@
 
   <body>
     <div class="container">
+
+
+    <div class="btn-group btn-group-lg" role="group">
+        <a type="button" class="btn btn-default" href="/historique_f44"><span class="glyphicon glyphicon-list"> Historique</a>
+    </div>
+
     <div class="col-md-5 col-md-offset-4">
       <div class="form-area">
 
