--- a/views/chercher_process.ejs
+++ b/views/chercher_process.ejs
@@ -19,7 +19,7 @@
             highlight: true,
             minLength: 1,
             name: 'users',
-            remote: 'http://localhost:8080/search_immat?key=%QUERY',
+            remote: 'http://localhost:8080/search_num?key=%QUERY',
         });
       });
     </script>
@@ -108,7 +108,7 @@
         <div class="form-area">
 
           <!--Form-->
-          <form role="form" action="/data_chercher_vehicule" method="POST" >
+          <form role="form" action="/data_chercher_process" method="POST" >
             <br>
               <div class="text-center">
                 <h2><span class="glyphicon glyphicon-refresh"></span> Chercher une fiche F44 </h2>
