--- a/views/chercher_vehicule_resp.ejs
+++ b/views/chercher_vehicule_resp.ejs
@@ -176,10 +176,8 @@
 <br>
 
 <div class="row">
-<p data-toggle="tooltip" title="su"><button type="button" class="btn btn-warning pull-right"data-toggle="modal" data-target="#edit">Modifier</button></p>
-
-
-<p data-toggle="tooltip" title="su"><button type="button" class="btn btn-danger pull-right"data-toggle="modal" data-target="#delete">Supprimer</button></p>
+<button type="button" class="btn btn-warning pull-right"data-toggle="modal" data-target="#edit">Modifier</button> <br><br> <button type="button" class="btn btn-danger pull-right"data-toggle="modal" data-target="#delete">Supprimer</button>
+</div>
 
 <div class="modal fade" id="edit" tabindex="-1" role="dialog" aria-labelledby="edit" aria-hidden="true">
   <div class="modal-dialog">
