requêtes sql + modifs listes

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -55,7 +55,7 @@
 		<% rowsv.forEach(function(vehicules){ %>
 			<tr id=<%=vehicules.IMMAT%> >
 
-				<td> <div contenteditable  </div><%=vehicules.MVA%> </td>
+				<td> <%=vehicules.MVA%> </td>
 				<td> <%=vehicules.IMMAT%></td>
 				<td> <%=vehicules.CURRENT_LOCATION_STN%></td>
 				<td> <%=vehicules.STATUT%></td>
