--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -36,8 +36,8 @@
 			</tr>
 	</div>
 		<% rowsv.forEach(function(vehicules){ %>
-			<tr onclick="input" data-toggle="modal" data-target="#edit" data-whatever="<%=vehicules.MVA%>" >
-				<td class="mva"> <%=vehicules.MVA%> </td>
+			<tr >
+				<td > <%=vehicules.MVA%> </td>
 				<td> <%=vehicules.IMMAT%></td>
 				<td> <%=vehicules.CURRENT_LOCATION_STN%></td>
 				<td> <%=vehicules.STATUT%></td>
