--- a/views/chercher_agence_resp.ejs
+++ b/views/chercher_agence_resp.ejs
@@ -137,13 +137,15 @@
     <table  class = "table table-hover table-bordered text-center" id="myTable">
   		<div class="text-center">
   			<tr>
+          <th> id </th>
   			<th>  Nom  </th>
   			<th>  Adresse </th>
   			</tr>
   	</div>
   		<% rows.forEach(function(agence){ %>
   			<tr >
-  				<td ><div contenteditable><span id = 'nom'> <%=agence.nom%>  </span> </div></td>
+  				<td ><span id = 'id'> <%=agence.idAgence%>  </span> </td>
+          <td ><div contenteditable><span id = 'nom'> <%=agence.nom%>  </span> </div></td>
   				<td> <div contenteditable><span id = 'adresse'> <%=agence.adresse%> </span> </div> </td>
 
   			</tr>
@@ -184,7 +186,8 @@
         			url: 'http://localhost:8080/modifier_agence',
         			data : {
         			nom : $( '#nom' ).html(),
-        			adresse : $( '#adresse' ).html()
+        			adresse : $( '#adresse' ).html(),
+              id : $( '#id' ).html()
         				},
 
         			success : function (data) {
