--- a/views/chercher_parking_resp.ejs
+++ b/views/chercher_parking_resp.ejs
@@ -18,7 +18,6 @@
             hint: true,
             highlight: true,
             minLength: 1,
-            name: 'users',
             remote: 'http://localhost:8080/search_parking?key=%QUERY',
         });
       });
@@ -137,6 +136,7 @@
     <table  class = "table table-hover table-bordered text-center" id="myTable">
   		<div class="text-center">
   			<tr>
+        <th> id </th>
   			<th> Nom </th>
   			<th> Agence </th>
 
@@ -144,7 +144,9 @@
   	</div>
   		<% rows.forEach(function(parking){ %>
   			<tr >
-  				<td ><div contenteditable><span id = 'nom'> <%=parking.nom%>  </span> </div></td>
+
+  				<td ><span id = 'id'> <%=parking.idParking%>  </span> </td>
+          <td ><div contenteditable><span id = 'nom'> <%=parking.nom%>  </span> </div></td>
   				<td> <div contenteditable><span id = 'agence'> <%=parking.agence%> </span> </div> </td>
 
   			</tr>
@@ -185,7 +187,8 @@
         			url: 'http://localhost:8080/modifier_parking',
         			data : {
         			nom : $( '#nom' ).html(),
-        			agence : $( '#agence' ).html()
+        			agence : $( '#agence' ).html(),
+              id : $( '#id').html()
         				},
 
         			success : function (data) {
