--- a/views/header.ejs
+++ b/views/header.ejs
@@ -73,7 +73,7 @@
 						<li><a href="/fvehicule"> Réception/Checkin </a></li>
 						<% if (user.attribut == "administrateur" || user.attribut == "opérateur") { %>
 						<li role="separator" class="divider"></li>
-						<li><a href="/assigner_tache">Assigner une tâche</a></li>
+						<li><a href="#">Assigner une tâche</a></li>
 						<% } %>
 						<li role="separator" class="divider"></li>
 						<li><a href="#"> Tâches assignées </a></li>
