--- a/views/recuperer_vehicule.ejs
+++ b/views/recuperer_vehicule.ejs
@@ -10,10 +10,10 @@
 
 
 	<div class="text-center">
-		<h1><span class="fa fa-road"></span> Liste des véhicules à préparer</h1>
+		<h1><span class="fa fa-road"></span> Liste des véhicules à récupérer</h1>
 		<br>
   </div>
- 
+
 	<table class = "table table-hover table-bordered text-center">
 		<div class="text-center">
 			<tr>
@@ -44,7 +44,7 @@
 				<td> <%=vehicules.NUMERO_CONTRAT%></td>
 				<td> <%=vehicules.marque%></td>
 				<td> <%=vehicules.libell_mod_le%></td>
-				
+
 			</tr>
 			<%})%>
 	</table>
